--- a/hungry-a-start/hungry-a-start.vcxproj
+++ b/hungry-a-start/hungry-a-start.vcxproj
@@ -145,7 +145,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="controllers.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="solver_a_star.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="controller.h" />
+    <ClInclude Include="solver_a_star.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
